Change e-mail address

--- a/README
+++ b/README
@@ -14,8 +14,8 @@ LICENSE
   See LICENSE
 
 INSTALLATION
-  CMake ver. 2.6 (a Cross-Platform Makefile Generator) or greater is required
-  A working SH7604 cross-compiler toolchain is required
+  CMake ver. 2.6 (a Cross-Platform Makefile Generator) or greater is
+  required A working SH7604 cross-compiler toolchain is required
 
   As a normal user
     $ cd libyaul/
